# sophon-stream

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md  README_EN.md  VERSION
algorithm/: CMakeLists.txt
algorithm/src/: Algorithm.cpp  Algorithm.h  AlgorithmApiFactory.h  AlgorithmFactorySelector.cpp  AlgorithmFactorySelector.h  Context.h  Inference.h  PreProcess.h
algorithm/src/context/: HostContext.cpp  HostContext.h  SophgoContext.cpp  SophgoContext.h
algorithm/src/factory/: HostEncodeFactory.cpp  HostEncodeFactory.h  UnetFactory.cpp  UnetFactory.h  Yolov5Factory.cpp  Yolov5Factory.h  Yolov5PostFactory.cpp  Yolov5PostFactory.h
algorithm/src/inference/: NoopInference.cpp  NoopInference.h  UnetInference.cpp  UnetInference.h  YoloXInference.cpp  YoloXInference.h  Yolov5Inference.cpp  Yolov5Inference.h  Yolov5PostInference.cpp  Yolov5PostInference.h
algorithm/src/post_process/: NoopPostprocess.cpp  NoopPostprocess.h  UnetPost.cpp  UnetPost.h  YoloXPost.cpp  YoloXPost.h  Yolov5Post.cpp  Yolov5Post.h  Yolov5PostPost.cpp  Yolov5PostPost.h
algorithm/src/pre_process/: HostEncodePre.cpp  HostEncodePre.h  UnetPre.cpp  YoloXPre.cpp  Yolov5PostPre.cpp  Yolov5PostPre.h  Yolov5Pre.cpp  Yolov5Pre.h
element/algorithm/bytetrack/: CMakeLists.txt  README.md  README_EN.md
element/algorithm/yolov5/: CMakeLists.txt  README.md  README_EN.md  Yolov5Algorithm.cc  Yolov5Algorithm.h  Yolov5Inference.cc  Yolov5Inference.h  Yolov5Post.cc  Yolov5Post.h  Yolov5Pre.cc  Yolov5Pre.h  Yolov5SophgoContext.cc  Yolov5SophgoContext.h
element/algorithm/yolox/: CMakeLists.txt  README.md  README_EN.md  yolox.cpp  yolox.h  yolox_context.cpp  yolox_context.h  yolox_inference.cpp  yolox_inference.h  yolox_post_process.cpp  yolox_post_process.h  yolox_pre_process.cpp  yolox_pre_process.h
element/multimedia/decode/: CMakeLists.txt  Decoder.cpp  Decoder.h  DecoderElement.cpp  DecoderElement.h  README.md  README_EN.md  SophgoContext.cpp  SophgoContext.h  SophgoDecode.cpp  SophgoDecode.h
engine/: CMakeLists.txt  Develop.md  README.md  \  config.h  config.h.in  run.cmake
engine/config/: config.yml  debug.yml
engine/docs/: Doxyfile  custom.css
engine/element/: ActionElement.cpp  ActionElement.h  DecoderElement.cpp  DecoderElement.h  MandatoryLink.h  TrackerElement.h  element.cmake
engine/element/algorithm/: algorithm.cmake
engine/element/multimedia/: multimedia.cmake
engine/element/tracker/: HungarianState.cpp  (+8 more)
engine/framework/: DataPipeNew.cpp  DataPipeNew.h  ElementFactory.h  ElementManager.cpp  ElementManager.h  ElementNew.cpp  ElementNew.h  Engine.cpp  Engine.h  datapipe.cc  datapipe.h  element.cc  element.h  element_factory.cc  element_factory.h  element_manager.cc  element_manager.h  engine.cc  engine.h  framework.cmake
engine/src/: Doxyfile
framework/: CMakeLists.txt
framework/common/: Clocker.h  DetectedObjectMetadata.h  Frame.h  ObjectMetadata.h  RecognizedObjectMetadata.h  SegmentedObjectMetadata.h  bmnn_utils.h  clocker.h  common_defs.h  common_tool.cc  common_tool.h  detected_object_metadata.h  error_code.h  face_object_metadata.h  frame.h  graphics.h  http_defs.cc  http_defs.h  logger.cc  logger.cpp  logger.h  no_copyable.h  obb_object_metadata.h  object_metadata.h  posed_object_metadata.h  profiler.cc  profiler.h  recognized_object_metadata.h  segmented_object_metadata.h  serialize.h  singleton.h  tracked_object_metadata.h
framework/include/: connector.h  datapipe.h  element.h  element_factory.h  element_manager.h  engine.h  graph.h  group.h  listen_thread.h
framework/src/: connector.cc  datapipe.cc  element.cc  element_factory.cc  element_manager.cc  engine.cc  graph.cc  listen_thread.cc
multimedia/: CMakeLists.txt  README.md  config.h  config.h.in
multimedia/src/: Context.h  MultiMedia.cpp  MultiMediaApi.h  MultiMediaApiFactory.h  MultiMediaFactory.h  MultiMediaFactorySelector.h  Process.h
samples/: CMakeLists.txt  README.md  README_EN.md
samples/bird_dwa_blend_encode/: README.md
samples/bytetrack/: CMakeLists.txt  README.md  README_EN.md
samples/dwa_blend_encode/: README.md  gridinfo_and_wgt.md
samples/dwa_dpu_encode/: Calibration.md  README.md
samples/dwa_lightstereo_encode/: README.md
samples/gdwa_blend_encode/: README.md
samples/include/: EdgeAwtk.h  draw_funcs.h  init_engine.h
samples/license_area_intrusion/: README.md  README_EN.md
samples/license_plate_recognition/: CMakeLists.txt  README.md  README_EN.md
samples/line_crossing/: README.md
samples/multi_graph/: README.md  README_EN.md
samples/openpose/: CMakeLists.txt  README.md  README_EN.md
samples/ppocr/: README.md  README_EN.md
samples/resnet/: CMakeLists.txt  README.md  README_EN.md
samples/retinaface/: CMakeLists.txt  README.md  README_EN.md
samples/retinaface_distributor_resnet_faiss_converger/: CMakeLists.txt  README.md  README_EN.md
samples/scripts/: download.sh
samples/src/: EdgeAwtk.cpp  assets.c  cvUniText.cpp  main.cc
samples/structured_recognition/: README.md  README_EN.md
samples/trinocular_panorama_stitch/: README.md
samples/tripwire/: README.md  README_EN.md
samples/usecase/: config.h  usecaseUnet.cpp  usecaseYoloTracker.cpp  usecaseYoloX.cpp  usecaseYolov5.cpp  usecase_unet.cc  usecase_yolov5.cc  usecase_yolov5_config_new.cc  usecase_yolox.cc  usecase_yolox_config_new.cc  usecase_yolox_tracker.cc
samples/yolov5/: CMakeLists.txt  README.md  README_EN.md
samples/yolov5_bytetrack_distributer_resnet_converger/: CMakeLists.txt
samples/yolov5_bytetrack_distributor_resnet_converger/: CMakeLists.txt  README.md  README_EN.md
samples/yolov5_distributer_blank_converger/: CMakeLists.txt
samples/yolov5_fastpose_posec3d/: README.md  README_EN.md
samples/yolov7/: README.md  README_EN.md
samples/yolov8/: README.md  README_EN.md
samples/yolov8_obb/: README.md
samples/yolox/: CMakeLists.txt  README.md  README_EN.md
samples/yolox_bytetrack_osd_encode/: CMakeLists.txt  README.md  README_EN.md
samples/yolox_bytetrack_osd_qt/: README.md  README_EN.md
tools/web_visualize/: CMakeLists.txt  README.md  app.py  index.html  requirements.txt
(+1121 files in other folders)
